--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h3>Programa: Ing Sistem</h3>
     <h4>
         <p>Fecha de creación: Agosto 30 de 2021</p>
-        <p>Celular: 3188253530 Skype:sole@hotmail.com correo:smgarciasala@unadvirtual.edu.co</p>
-        
+        <p>Celular: 3188253530 Skype:sole@hotmail.com <br>
+            correo:smgarciasala@unadvirtual.edu.co</p>
     </h4>
 </body>
 </html>
