--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>Proyecto de sitio web 2021 -1604</h1>
+    <h1>Proyectos de sitios wed 2022 -16-01</h1>
 
-    <h3>Nombre:Sol Maria Garcia Salzar</h3>
-    <h3>Programa: Ing Sistem</h3>
-    <h4>
-        <p>Fecha de creación: Agosto 30 de 2021</p>
-        <p>Celular: 3188253530 Skype:sole@hotmail.com <br>
-            correo:smgarciasala@unadvirtual.edu.co</p>
-    </h4>
+    <h3>Sol Maria Garcia Salazar <br>Diseño de sitios Web <br> 12 febrero 2022 <br>3188253530 sole@hotmail.com</h3>
 </body>
 </html>
