--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Proyectos de sitios wed 2022 -16-01</h1>
 
-    <h3>Sol Maria Garcia Salazar <br>Diseño de sitios Web <br> 12 febrero 2022 <br>3188253530 sole@hotmail.com</h3>
+    <h3>Sol Maria Garcia Salazar <br>Ingenieria de Sistemas Diseño de sitios Web <br> 12 febrero 2022 <br>3188253530 sole@hotmail.com</h3>
 </body>
 </html>
